examples/bad/ERROR_INCORRECT_ARITY_OF_MAIN/main_with_zero_param.st
language core;

extend with #nullary-functions;

fn main() -> Nat {
    return 0
}

//ERROR_INCORRECT_ARITY_OF_MAIN
